# LogAnalyzer

./: .clang-tidy  CMakeLists.txt  README.md
include/: ConfigManager.h  EventDetector.h  LogEntry.h  LogParser.h  ReportGenerator.h
reports/: report.txt
src/: ConfigManager.cpp  EventDetector.cpp  LogParser.cpp  ReportGenerator.cpp  main.cpp
tests/: test_ConfigManager.cpp  test_EventDetector.cpp  test_LogParser.cpp  test_ReportGenerator.cpp  test_basic.cpp
